# endfield-essence-recognizer

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  SETUP.md  main.spec  pyproject.toml  ruff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: backend-ci.yml  backend-report.yml  build-and-release.yml  frontend-ci.yml
frontend/: eslint.config.js  package-lock.json  package.json  vite.config.mts
frontend-vuetify/: package-lock.json  package.json
frontend-vuetify/src/composables/: useLogs.ts
frontend-vuetify/src/pages/: logs.vue
frontend/src/: App.vue  main.ts
frontend/src/components/: ItemIcon.vue  UpdateDialogs.vue
frontend/src/composables/: useLogs.ts  (+3 more)
ocr/: __init__.py  endocr.py  ocr.py  setup.py
scripts/: generate_templates.py  mask_screenshot_uid.py  test_layout_anchoring.py  transform_weapon_data.py
scripts/legacy_game_data/: __init__.py  item.py  weapon.py
src/endfield_essence_recognizer/: __init__.py  __main__.py  auto_skipper.py  capture.py  config.py  delivery_claimer.py  deps.py  essence_scanner.py  exceptions.py  hotkey_entrypoints.py  image.py  log.py  main_win32.py  recognizer.py  server.py  version.py  webui.py  window.py
tests/: conftest.py  test_config.py  test_layout_anchoring.py  test_user_setting_manager.py  test_window_manager.py
tests/integration/: test_lifespan.py  test_scanner_api.py  test_screenshot_api.py  test_system_api.py  test_user_setting_api.py
(+158 files in other folders)
